--- a/contact-us.html
+++ b/contact-us.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <meta charset="utf-8">
-    <title>Manglam Dental Hospital – Expert Dental Care with a Gentle Touch</title>
-    <meta name="description" content="Visit Manglam Dental Hospital for trusted, affordable, and advanced dental treatments. From general dentistry to cosmetic procedures, our expert team ensures your perfect smile.">
-    <meta property="og:title" content="Manglam Dental Hospital – Expert Dental Care with a Gentle Touch">
-    <meta property="og:description" content="Trusted and affordable dental care at Manglam Dental Hospital. Smile confidently with our expert team and modern technology.">
+    <meta charset="utf-8">
+    <title>Galaxy PG Jaipur | Luxury Student Accommodation Since 10+ Years</title>
+    <meta name="description" content="Galaxy PG offers secure, affordable & luxury student accommodation in Jaipur. Founded by Rakesh Kumar, we provide homely stays with modern amenities. Book today!">
+    <meta property="og:title" content="Galaxy PG Jaipur | Luxury Student Accommodation Since 10+ Years">
+    <meta property="og:description" content="Experience comfortable & secure PG in Jaipur with Galaxy PG. 10+ years of trusted service, modern amenities, and a homely environment for students.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.manglamdentalhospital.com">
-    <meta property="og:image" content="https://www.manglamdentalhospital.com/images/og-banner.jpg">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Manglam Dental Hospital – Expert Dental Care with a Gentle Touch">
-    <meta name="twitter:description" content="Visit Manglam Dental Hospital for trusted and advanced dental services. Your smile is our passion.">
-    <meta name="twitter:image" content="https://www.manglamdentalhospital.com/images/twitter-banner.jpg"> 
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-      <link href="css/style.css" rel="stylesheet">
-      <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-      <link rel="icon" href="images/favicon.png" type="image/x-icon">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta property="og:url" content="https://www.galaxypgjaipur.com"> 
+    <meta property="og:image" content="https://demo.aspiretechnosys.com/Galaxy-PG/images/logo-dark.png">
+    <meta property="og:site_name" content="Galaxy PG Jaipur">
+    <meta name="twitter:image" content="https://demo.aspiretechnosys.com/Galaxy-PG/images/logo-dark.png"> 
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
    </head>
    <body>
       <div class="page-wrapper">
