--- a/about-us.html
+++ b/about-us.html
@@ -42,16 +42,16 @@
                               <a href="about-us.html">About Us</a>
                            </li>
                            <li>
+                              <a href="our-branches.html">Our branches</a>
+                           </li>
+                           <li>
                               <a href="services.html">Services and Facilities</a>
                            </li>
                            <li>
                               <a href="testimonials.html">Testimonials </a>
                            </li>
                            <li>
-                              <a href="our-branches.html">Our branches</a>
-                           </li>
-                           <li>
-                              <a href="page-contact.html">Contact Us</a>
+                              <a href="contact-us.html">Contact Us</a>
                            </li>
                         </ul>
                      </nav>
