--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                               <a href="about-us.html">About Us</a>
                            </li>
                            <li>
+                              <a href="our-branches.html">Our branches</a>
+                           </li>
+                           <li>
                               <a href="services.html">Services and Facilities</a>
                            </li>
                            <li>
                               <a href="testimonials.html">Testimonials </a>
                            </li>
                            <li>
-                              <a href="our-branches.html">Our branches</a>
-                           </li>
-                           <li>
-                              <a href="page-contact.html">Contact Us</a>
+                              <a href="contact-us.html">Contact Us</a>
                            </li>
                         </ul>
                      </nav>
@@ -553,7 +553,7 @@
                         <div class="content-box">
                            <div class="sec-title">
                               <span class="sub-title">Galaxy Moon Boys PG</span>
-                              <div class="text">GalaxyPg, Front of Samachar, Jagat Near, Bhaskar Flyover, <br> Vivek Vihar, Bajaj Nagar, Jaipur, Rajasthan 302015 </div>
+                              <div class="text mb-2">Ganesh Colony, , near Talwariya Marriage Garden Hall, <br> Chhayadip Nagar, Mahesh Nagar, Gopal Pura Mode, Jaipur, Rajasthan 302015 </div>
                               <div style="padding-right: 25px;">
                                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.122617543456!2d75.80407600000001!3d26.8678451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5b683201385%3A0x2495a3f1342b16bc!2sGalaxy%20Pg!5e0!3m2!1sen!2sin!4v1748410079711!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                               </div>
@@ -568,7 +568,7 @@
                         <div class="content-box">
                            <div class="sec-title">
                               <span class="sub-title">Galaxy PG for Girls</span>
-                              <div class="text">82, Ganesh Marg, Surya Nagar, Gopal Pura Mode, <br> Jaipur, Rajasthan 302015 </div>
+                              <div class="text mb-2">82, Ganesh Marg, Surya Nagar, Gopal Pura Mode, <br> Jaipur, Rajasthan 302015 </div>
                               <div style="padding-right: 25px;">
                                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.98871966483!2d75.77445237768373!3d26.87572927293354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5002b8d24e1%3A0xf4dc9059a5293033!2sGalaxy%20PG%20for%20Girls!5e0!3m2!1sen!2sin!4v1748409957911!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                               </div>
@@ -651,7 +651,7 @@
                         <div class="content-box">
                            <div class="sec-title">
                               <span class="sub-title">Galaxy Tanishaan Girls PG </span>
-                              <div class="text">GalaxyPg, Front of Samachar, Jagat Near, Bhaskar <br> Flyover, Vivek Vihar, Bajaj Nagar, Jaipur, Rajasthan 302015 </div>
+                              <div class="text mb-2">GalaxyPg, Front of Samachar, Jagat Near, Bhaskar <br> Flyover, Vivek Vihar, Bajaj Nagar, Jaipur, Rajasthan 302015 </div>
                               <div style="padding-right: 25px;">
                                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3558.880434568158!2d75.7761115!3d26.875539600000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5002e281eb9%3A0xd6dd4381ab4a4b1c!2sGalaxy%20pg!5e0!3m2!1sen!2sin!4v1748410249154!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                               </div>
