--- a/our-branches.html
+++ b/our-branches.html
@@ -45,13 +45,13 @@
                               <a href="about-us.html">About Us</a>
                            </li>
                            <li>
+                              <a href="our-branches.html">Our branches</a>
+                           </li>
+                           <li>
                               <a href="services.html">Services and Facilities</a>
                            </li>
                            <li>
                               <a href="testimonials.html">Testimonials </a>
-                           </li>
-                           <li>
-                              <a href="our-branches.html">Our branches</a>
                            </li>
                            <li>
                               <a href="contact-us.html">Contact Us</a>
@@ -208,7 +208,7 @@
                                     <h4>
                                        <a href="#.">GALAXY BOYS PG - JLN MARG</a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - GalaxyPg, Front of Samachar, Jagat Near, Bhaskar Flyover, Vivek Vihar, Bajaj Nagar, Jaipur, Rajasthan 302015 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.122617543456!2d75.80407600000001!3d26.8678451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5b683201385%3A0x2495a3f1342b16bc!2sGalaxy%20Pg!5e0!3m2!1sen!2sin!4v1748436941413!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
@@ -254,7 +254,7 @@
                                     <h4>
                                        <a href="#.">Kishor Luxury Boys Pg</a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - 87, Ganesh Marg, Surya Nagar, Gopal Pura Mode, Jaipur, Rajasthan 302018 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3558.892371322219!2d75.77620739999999!3d26.8751604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5003bff6be5%3A0x729b1be3c1aa74e9!2sKishore%20PG!5e0!3m2!1sen!2sin!4v1748436990068!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
@@ -300,7 +300,7 @@
                                     <h4>
                                        <a href="#.">Galaxy PG for Girls</a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - 82, Ganesh Marg, Surya Nagar, Gopal Pura Mode, Jaipur, Rajasthan 302015 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3558.8735595314647!2d75.7761056!3d26.875757999999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5002b8d24e1%3A0xf4dc9059a5293033!2sGalaxy%20PG%20for%20Girls!5e0!3m2!1sen!2sin!4v1748437049300!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
@@ -346,7 +346,7 @@
                                     <h4>
                                        <a href="#.">Galaxy Luxury Living Boys Pg </a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - 76, Ganesh Marg, Surya Nagar, Ridhi Sidhi Circle, Gopal Pura Mode, Jaipur, Rajasthan 302015 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3558.880434568158!2d75.7761115!3d26.875539600000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5002e281eb9%3A0xd6dd4381ab4a4b1c!2sGalaxy%20pg!5e0!3m2!1sen!2sin!4v1748437096960!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
@@ -399,7 +399,7 @@
                                     <h4>
                                        <a href="#.">Angels Homes PG</a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - 1\113, Vishnu Marg, SFS Manasarovar, Hans Vihar, Mansarovar, Jaipur, Rajasthan 302020 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.0284218618244!2d75.7689364!3d26.839048299999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5e68bfeb54f%3A0xc407c008b4647142!2sAngel%20homes!5e0!3m2!1sen!2sin!4v1748437124180!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
@@ -452,7 +452,7 @@
                                     <h4>
                                        <a href="#.">Galaxy Luxury Living Girls PG</a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - 3/3, Gurukul Marg, opposite SFS Shopping Centre, sector 3 SFS, Mansarovar, Jaipur, Rajasthan 302020 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.036772133755!2d75.773457!3d26.838782699999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db52911e866dd%3A0xeee8496ab6d85037!2sGalaxy%20Luxury%20Living%20Girls%20Pg!5e0!3m2!1sen!2sin!4v1748437214410!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
@@ -505,7 +505,7 @@
                                     <h4>
                                        <a href="#.">Galaxy Girls PG</a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - 140, Ganesh Marg, Surya Nagar, Ridhi Sidhi Circle, Gopal Pura Mode, Jaipur, Rajasthan 302015 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3558.875763074497!2d75.77639500000001!3d26.875688000000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDUyJzMyLjUiTiA3NcKwNDYnMzUuMCJF!5e0!3m2!1sen!2sin!4v1748437182116!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
@@ -558,7 +558,7 @@
                                     <h4>
                                        <a href="#.">GALAXY STAR BOYS PG</a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - D-18 Nu Light Colony , Near Bhaskar Flyover near gopalpura bypass bajaj nagar Jaipur 302018 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.166766645108!2d75.80072919999999!3d26.866442199999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5dd6d4458ed%3A0x17d8fb77197be088!2sGalaxy%20Star%20boys%20PG%20%2C%20Near%20Drishti%20Ias%2C%20Samachar%20Jagat%20Allen!5e0!3m2!1sen!2sin!4v1748494406221!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
@@ -611,7 +611,7 @@
                                     <h4>
                                        <a href="#.">GALAXY MOON BOYS PG</a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - Ganesh Colony, , near Talwariya Marriage Garden Hall, Chhayadip Nagar, Mahesh Nagar, Gopal Pura Mode, Jaipur, Rajasthan 302015 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3558.668166002819!2d75.777034!3d26.882282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjbCsDUyJzU2LjIiTiA3NcKwNDYnMzcuMyJF!5e0!3m2!1sen!2sin!4v1748494500020!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
@@ -657,7 +657,7 @@
                                     <h4>
                                        <a href="#.">GALAXY TANISHAAN GIRLS PG</a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - GalaxyPg, Front of Samachar, Jagat Near, Bhaskar Flyover, Vivek Vihar, Bajaj Nagar, Jaipur, Rajasthan 302015 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.122617543456!2d75.80407600000001!3d26.8678451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5b683201385%3A0x2495a3f1342b16bc!2sGalaxy%20Pg!5e0!3m2!1sen!2sin!4v1748494531625!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
@@ -696,7 +696,7 @@
                                     <h4>
                                        <a href="#.">GALAXY BOYS PG HIMMAT NAGAR</a>
                                     </h4>
-                                    <span class="price">
+                                    <span class="price mb-2">
                                        <b>ADDRESS</b> - VR72+3FR, Bhaskar Flyover, Indra Nagar, Gopalpura, Himmat Nagar, Bajaj Nagar, Jaipur, Rajasthan 302018 </span>
                                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.28347817038!2d75.8011302!3d26.862733199999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5834283f669%3A0x4a6b584d781c26b7!2sGalaxy%20pg%20(Himmat%20nagar)!5e0!3m2!1sen!2sin!4v1748494568760!5m2!1sen!2sin" width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                  </div>
