--- a/testimonials.html
+++ b/testimonials.html
@@ -164,7 +164,140 @@
          <section class="featured-products">
             <div class="auto-container">
                <div class="mixitup-gallery">
-                  <div class="filter-list row"></div>
+                  <div class="row">
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Priya Sharma</h5> 
+                             </div>
+                             <p>
+                                Galaxy PG gave me the comfort of home while I pursued my studies in Jaipur. The rooms are clean, and the environment is peaceful and safe. Best part: Quiet surroundings that help me focus on my studies.
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Aman Verma</h5> 
+                             </div>
+                             <p>
+                                I’ve stayed here for over a year and it’s been a great experience. Staff is very supportive and quick to respond to any issue. Best part: 24/7 security and a strong sense of safety.
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Riya Jain</h5> 
+                             </div>
+                             <p>
+                                It’s hard to find a PG that feels like home, but Galaxy PG does it. Rooms are spacious, well-lit, and regularly cleaned. Best part: Tasty, hygienic food just like home!
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Saurabh Mehta</h5> 
+                             </div>
+                             <p>
+                                As a student, I needed peace, comfort, and internet – Galaxy PG delivered all. The management is professional yet friendly. Best part: Super-fast Wi-Fi and peaceful study environment.
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Neha Chauhan</h5> 
+                             </div>
+                             <p>
+                                Moving to a new city was tough, but Galaxy PG made it easy. I felt welcome from day one and love the homely vibe. Best part: Caring staff and excellent cleanliness.
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Rohit Yadav</h5> 
+                             </div>
+                             <p>
+                                I’ve recommended Galaxy PG to many of my college mates. The facilities are well-maintained and worth every rupee. Best part: Affordable luxury that doesn’t compromise on quality.
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Sakshi Agarwal</h5> 
+                             </div>
+                             <p>
+                                Galaxy PG is perfect for girls looking for safe and comfortable accommodation. I’ve never felt insecure here even once. Best part: Top-notch safety and friendly neighbors.
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Tushar Singh</h5> 
+                             </div>
+                             <p>
+                                This PG gave me everything I needed as a student – comfort, support, and peace. The food and hygiene levels are excellent. Best part: Everything is organized and professionally managed.
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Isha Malik</h5> 
+                             </div>
+                             <p>
+                                Living here has been a stress-free experience throughout my studies. I really appreciate how clean and well-run everything is. Best part: Always clean washrooms and well-kept common areas.
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Deepak Choudhary</h5> 
+                             </div>
+                             <p>
+                                Galaxy PG offers a great balance of affordability and comfort. It’s way better than many overpriced options I’ve seen. Best part: Budget-friendly without compromising on facilities.
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Anjali Sinha</h5> 
+                             </div>
+                             <p>
+                                Galaxy PG gave me a peaceful space to live and grow during my college years. The friendly atmosphere and helpful staff made all the difference. Best part: A true home away from home!
+                             </p>
+                        </div>
+                     </div>
+                     <div class="col-lg-4">
+                        <div class="testimonials">
+                             <div class="d-flex">
+                                 <img src="images/user.png" height="60">
+                                 <h5 class="m-3">Nikhil Rathore</h5> 
+                             </div>
+                             <p>
+                                From clean rooms to timely meals, everything at Galaxy PG runs smoothly. It’s perfect for students who want a hassle-free stay in Jaipur. Best part: Reliable facilities and a supportive environment.
+                             </p>
+                        </div>
+                     </div>
+                  </div>
                </div>
             </div>
          </section>
