--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <meta property="og:description" content="Experience comfortable & secure PG in Jaipur with Galaxy PG. 10+ years of trusted service, modern amenities, and a homely environment for students.">
       <meta property="og:type" content="website">
       <meta property="og:url" content="https://www.galaxypgjaipur.com">
-      <meta property="og:image" content="https://demo.aspiretechnosys.com/Galaxy-PG/images/logo-dark.png">
+      <meta property="og:image" content="https://galaxypgjaipur.com/images/logo-dark.png">
       <meta property="og:site_name" content="Galaxy PG Jaipur">
-      <meta name="twitter:image" content="https://demo.aspiretechnosys.com/Galaxy-PG/images/logo-dark.png">
+      <meta name="twitter:image" content="https://galaxypgjaipur.com/images/logo-dark.png">
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/flatpickr.min.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
@@ -60,7 +60,7 @@
                      </nav>
                   </div>
                   <div class="outer-box">
-                     <a href="page-contact.html" class="header-btn">Book Now</a>
+                     <a href="contact-us.html" class="header-btn">Book Now</a>
                      <div class="mobile-nav-toggler">
                         <span class="icon lnr-icon-bars"></span>
                      </div>
@@ -702,9 +702,9 @@
                                           <i class="fa-solid fa-star"></i>
                                        </li>
                                     </ul>
-                                    <div class="text" data-animation-in="fadeInUp" data-delay-in="0.3">I visited Manglam Dental Hospital for a root canal treatment. I was nervous at first, but the doctor and staff made me feel at ease. The entire process was painless and smooth. They genuinely care about their patients. Thank you for the great service!</div>
+                                    <div class="text" data-animation-in="fadeInUp" data-delay-in="0.3">This PG gave me everything I needed as a student – comfort, support, and peace. The food and hygiene levels are excellent. Best part: Everything is organized and professionally managed.</div>
                                     <div class="auther-info" data-animation-in="fadeInUp" data-delay-in="0.4">
-                                       <h4 class="title">Rahul Meena</h4>
+                                       <h4 class="title">Priya Sharma</h4>
                                     </div>
                                     <div class="icon-box" data-animation-in="fadeInUp" data-delay-in="0.5">
                                        <figure class="image">
@@ -739,9 +739,9 @@
                                           <i class="fa-solid fa-star"></i>
                                        </li>
                                     </ul>
-                                    <div class="text" data-animation-in="fadeInUp" data-delay-in="0.3">I’ve been to many clinics before, but the experience at Manglam Dental Hospital was the best. The dentist was very knowledgeable and explained every step of my treatment. The clinic has modern equipment, and I could see they maintain high hygiene standards.</div>
+                                    <div class="text" data-animation-in="fadeInUp" data-delay-in="0.3">I’ve stayed here for over a year and it’s been a great experience. Staff is very supportive and quick to respond to any issue. Best part: 24/7 security and a strong sense of safety.</div>
                                     <div class="auther-info" data-animation-in="fadeInUp" data-delay-in="0.4">
-                                       <h4 class="title">Sonal Verma</h4>
+                                       <h4 class="title">Aman Verma</h4>
                                     </div>
                                     <div class="icon-box" data-animation-in="fadeInUp" data-delay-in="0.5">
                                        <figure class="image">
@@ -776,9 +776,9 @@
                                           <i class="fa-solid fa-star"></i>
                                        </li>
                                     </ul>
-                                    <div class="text" data-animation-in="fadeInUp" data-delay-in="0.3">I took my 7-year-old daughter for a dental checkup, and the pediatric dentist was so gentle and friendly with her. She didn’t cry at all, which is rare! The atmosphere is child-friendly and very clean. We are happy to have such a good dental hospital nearby.</div>
+                                    <div class="text" data-animation-in="fadeInUp" data-delay-in="0.3">It’s hard to find a PG that feels like home, but Galaxy PG does it. Rooms are spacious, well-lit, and regularly cleaned. Best part: Tasty, hygienic food just like home!</div>
                                     <div class="auther-info" data-animation-in="fadeInUp" data-delay-in="0.4">
-                                       <h4 class="title">Amit Kumar</h4>
+                                       <h4 class="title">Riya Jain</h4>
                                     </div>
                                     <div class="icon-box" data-animation-in="fadeInUp" data-delay-in="0.5">
                                        <figure class="image">
