--- a/about-us.html
+++ b/about-us.html
@@ -8,9 +8,9 @@
       <meta property="og:description" content="Experience comfortable & secure PG in Jaipur with Galaxy PG. 10+ years of trusted service, modern amenities, and a homely environment for students.">
       <meta property="og:type" content="website">
       <meta property="og:url" content="https://www.galaxypgjaipur.com">
-      <meta property="og:image" content="https://demo.aspiretechnosys.com/Galaxy-PG/images/logo-dark.png">
+      <meta property="og:image" content="https://galaxypgjaipur.com/images/logo-dark.png">
       <meta property="og:site_name" content="Galaxy PG Jaipur">
-      <meta name="twitter:image" content="https://demo.aspiretechnosys.com/Galaxy-PG/images/logo-dark.png">
+      <meta name="twitter:image" content="https://galaxypgjaipur.com/images/logo-dark.png">
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
       <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
@@ -57,7 +57,7 @@
                      </nav>
                   </div>
                   <div class="outer-box">
-                     <a href="page-contact.html" class="header-btn">Book Now</a>
+                     <a href="contact-us.html" class="header-btn">Book Now</a>
                      <div class="mobile-nav-toggler">
                         <span class="icon lnr-icon-bars"></span>
                      </div>
