--- a/services.html
+++ b/services.html
@@ -8,9 +8,9 @@
       <meta property="og:description" content="Experience comfortable & secure PG in Jaipur with Galaxy PG. 10+ years of trusted service, modern amenities, and a homely environment for students.">
       <meta property="og:type" content="website">
       <meta property="og:url" content="https://www.galaxypgjaipur.com">
-      <meta property="og:image" content="https://demo.aspiretechnosys.com/Galaxy-PG/images/logo-dark.png">
+      <meta property="og:image" content="https://galaxypgjaipur.com/images/logo-dark.png">
       <meta property="og:site_name" content="Galaxy PG Jaipur">
-      <meta name="twitter:image" content="https://demo.aspiretechnosys.com/Galaxy-PG/images/logo-dark.png">
+      <meta name="twitter:image" content="https://galaxypgjaipur.com/images/logo-dark.png">
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
       <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
@@ -57,7 +57,7 @@
                      </nav>
                   </div>
                   <div class="outer-box">
-                     <a href="page-contact.html" class="header-btn">Book Now</a>
+                     <a href="contact-us.html" class="header-btn">Book Now</a>
                      <div class="mobile-nav-toggler">
                         <span class="icon lnr-icon-bars"></span>
                      </div>
@@ -159,7 +159,7 @@
             <div class="auto-container">
                <div class="mixitup-gallery">
                   <div class="filter-list row">
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -181,7 +181,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -203,7 +203,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -225,7 +225,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -247,7 +247,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -269,7 +269,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -291,7 +291,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -313,7 +313,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -335,7 +335,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -357,7 +357,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -379,7 +379,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
@@ -401,7 +401,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12">
+                     <div class="product-block all mix pantry fruit col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                         <div class="inner-box">
                            <div class="image">
                               <a href="#.">
