--- a/testimonials.html
+++ b/testimonials.html
@@ -8,9 +8,9 @@
       <meta property="og:description" content="Experience comfortable & secure PG in Jaipur with Galaxy PG. 10+ years of trusted service, modern amenities, and a homely environment for students.">
       <meta property="og:type" content="website">
       <meta property="og:url" content="https://www.galaxypgjaipur.com">
-      <meta property="og:image" content="https://demo.aspiretechnosys.com/Galaxy-PG/images/logo-dark.png">
+      <meta property="og:image" content="https://galaxypgjaipur.com/images/logo-dark.png">
       <meta property="og:site_name" content="Galaxy PG Jaipur">
-      <meta name="twitter:image" content="https://demo.aspiretechnosys.com/Galaxy-PG/images/logo-dark.png">
+      <meta name="twitter:image" content="https://galaxypgjaipur.com/images/logo-dark.png">
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
       <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
@@ -57,7 +57,7 @@
                      </nav>
                   </div>
                   <div class="outer-box">
-                     <a href="page-contact.html" class="header-btn">Book Now</a>
+                     <a href="contact-us.html" class="header-btn">Book Now</a>
                      <div class="mobile-nav-toggler">
                         <span class="icon lnr-icon-bars"></span>
                      </div>
@@ -166,7 +166,7 @@
                <div class="mixitup-gallery">
                   <div class="row">
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Priya Sharma</h5> 
@@ -177,7 +177,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Aman Verma</h5> 
@@ -188,7 +188,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Riya Jain</h5> 
@@ -199,7 +199,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Saurabh Mehta</h5> 
@@ -210,7 +210,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Neha Chauhan</h5> 
@@ -221,7 +221,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Rohit Yadav</h5> 
@@ -232,7 +232,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Sakshi Agarwal</h5> 
@@ -243,7 +243,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Tushar Singh</h5> 
@@ -254,7 +254,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Isha Malik</h5> 
@@ -265,7 +265,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Deepak Choudhary</h5> 
@@ -276,7 +276,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Anjali Sinha</h5> 
@@ -287,7 +287,7 @@
                         </div>
                      </div>
                      <div class="col-lg-4">
-                        <div class="testimonials">
+                        <div class="testimonials wow fadeInUp">
                              <div class="d-flex">
                                  <img src="images/user.png" height="60">
                                  <h5 class="m-3">Nikhil Rathore</h5> 
